# twin

./: .gitignore  ARCHITECTURE.md  BUILD_ROADMAP.md  CLAUDE.md  README.md  personality.example.txt
.claude/commands/opsx/: apply.md
.claude/skills/address-pr-reviews/: SKILL.md
.claude/skills/openspec-apply-change/: SKILL.md
.github/workflows/: auto-pr.yml  build-artifacts.yml  claude-fix.yml  claude.yml  deploy.yml  destroy.yml  pr-responder.yml  secrets-scan.yml  security-scan.yml
backend/: agent_orchestrator.py  context.py  deploy.py  personality_agent.py  pyproject.toml  requirements.txt  resources.py  server.py  source_memory.py
backend/agents/: __init__.py  critic_agent.py  router_agent.py  twin_response_agent.py
backend/data/: bio.txt  facts.json  interests.txt  skills.json  style.txt
backend/personalities/: archetypes.json
backend/public_personas/: buffett.json  chaplin.json  gandhi.json  jobs.json
backend/scripts/: generate_persona_images.py
backend/twins/: example.json
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/create/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/debate/: page.tsx
frontend/app/deepen/: page.tsx
frontend/app/resume/: page.tsx
frontend/app/twin/: page.tsx
frontend/components/: app-nav.tsx  persona-avatar.tsx  twin-chat.tsx  twin.tsx
openspec/changes/add-homepage-feedback-hints/: README.md  design.md  tasks.md  (+1 more)
scripts/: deploy.sh  destroy.sh
terraform/: dev-state.json  main.tf  outputs.tf  terraform.tfvars  variables.tf
(+3 files in other folders)
