[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.54",
    "fastapi>=0.129.2",
    "httpx>=0.27.0",
    "mangum>=0.21.0",
    "openai>=2.21.0",
    "cryptography>=46.0.7",
    "pyjwt[crypto]>=2.8.0",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "uvicorn>=0.41.0",
    "python-docx>=1.1.2",
]
